# agent-edge-rs

./: .env.example  .gitignore  AUDIO_FIXES.md  AUTOMATIC_BARGE_IN.md  BARGE_IN_FIX.md  BUILD_INSTRUCTIONS.md  Cargo.toml  Cross.toml  DEPLOYMENT.md  DUAL_CHANNEL_SPOTIFY_INTEGRATION.md  LED_IMPLEMENTATION_STATUS.md  LLM_IMPLEMENTATION_PLAN.md  Makefile  PROTOCOL_CHANGES.md  README-API-KEYS.md  README.md  SERVER_BEHAVIOR_VERIFICATION.md  STREAM_AWARE_SINK.md  STREAM_ID_IMPLEMENTATION.md  TESTING.md  TESTING_BARGE_IN.md  WEEK_1_COMPLETED.md  audio-service.service  audio_recording_1753370382.pcm  audio_recording_1753370382.pcm.txt  audio_recording_1753370382_resampled_44khz.pcm  audio_recording_1753370382_resampled_44khz.pcm.txt  audio_recording_1753432567.pcm  audio_recording_1753432567.pcm.txt  audio_recording_1753432567_resampled_44khz.pcm  audio_recording_1753432567_resampled_44khz.pcm.txt  audio_recording_1753432712.pcm.txt  audio_recording_1753432765.pcm  audio_recording_1753432765.pcm.txt  audio_recording_1753432765_resampled_44khz.pcm  audio_recording_1753432765_resampled_44khz.pcm.txt  audio_recording_1753432809.pcm.txt  audio_recording_1753433198.pcm  audio_recording_1753433198.pcm.txt  audio_recording_1753433198_resampled_44khz.pcm  (+59 more)
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: .postCreateCommandMarker  .postStartCommandMarker  Dockerfile  README.md  devcontainer.json  setup.sh
.metals/: metals.mv.db
.scala-build/.bloop/: agent-edge-rs_d5c0a6989e-test.json  agent-edge-rs_d5c0a6989e.json
agent/: Cargo.toml
agent/src/: audio_capture.rs  audio_sink.rs  detection.rs  error.rs  lib.rs  main.rs  models.rs  speech_producer.rs  stt.rs  tts.rs  types.rs  vad.rs
agent/src/audio/: mod.rs
agent/src/blocking_stt/: capture.rs  mod.rs  types.rs  ws.rs
agent/src/llm/: client.rs  context.rs  mod.rs  prompts.rs
agent/src/llm/tools/: dialogue.rs
agent/src/services/: llm.rs  mod.rs  stt.rs  tts.rs  types.rs
agent/src/user_instruction/: mod.rs
agent/tests/: mock_audio_server.rs  shared_audio_client_test.rs  simple_audio_test.rs  simple_wav_test.rs  stt_timeout_test.rs  test_existing_stt.rs  wav_stt_test.rs
audio/: Cargo.toml  README.md  README_testing.md  audio_recording_1753386999.pcm  audio_recording_1753386999.pcm.txt  audio_recording_1753386999_resampled_44khz.pcm  audio_recording_1753386999_resampled_44khz.pcm.txt  audio_recording_1753429129.pcm  audio_recording_1753429129.pcm.txt  audio_recording_1753429129_resampled_44khz.pcm  audio_recording_1753429129_resampled_44khz.pcm.txt  build.rs  test_mock_server.md
audio/examples/: audio_echo_demo.rs  test_platform_conversion.rs
audio/src/: audio_sink.rs  audio_source.rs  error.rs  lib.rs  main.rs  mock_server.rs  platform_converter.rs  resampler.rs  tcp_server.rs
audio/tests/: audio_sink_tests.rs  audio_source_tests.rs  mock_server_test.rs
audio_api/: Cargo.toml  build.rs
audio_api/proto/: audio.proto
audio_api/src/: audio_converter.rs  audio_sink.rs  audio_source.rs  config.rs  error.rs  lib.rs  main.rs  platform.rs  platform_converter.rs  tcp_protocol.rs  tcp_server.rs  types.rs  utils.rs
audio_api/src/audio_capture/: mod.rs
audio_api/src/audio_source/: mod.rs
audio_api/src/audio_streamer/: events.rs  mod.rs
audio_api/src/speech_producer/: mod.rs
audio_api/src/tonic/: capture_service.rs  mod.rs  service.rs
audio_api/tests/: audio_sink_tests.rs  audio_source_tests.rs  grpc_tests.rs
audio_protocol/: Cargo.toml
audio_protocol/src/: client.rs  lib.rs  protocol.rs
deploy/: Makefile  deploy.sh
deploy-pi/: agent-edge  run-agent.sh
deploy/systemd/: agent-edge.service  audio.service  led-controller.service  mpv.service  spotifyd.service
examples/: led_demo.rs  led_test.rs  test_client.rs
service-protos/: Cargo.toml  build.rs
service-protos/proto/: audio.proto
service-protos/src/: lib.rs
src/: alsa_volume.rs  audio_sink.rs  audio_source.rs  config.rs  consumer_server.rs  error.rs  led_engine.rs  led_ring.rs  lib.rs  main.rs  mpv_controller.rs  platform.rs  producer_server.rs  protocol.rs  resampler.rs  spotify_controller.rs  stt.rs  tts.rs  types.rs  wakeword_error.rs  wakeword_model.rs  wakeword_models.rs  wakeword_utils.rs  wakeword_vad.rs
src/audio/: capture.rs  channel.rs  mod.rs  pulse_capture.rs
src/audio_capture/: imp_cpal.rs  imp_pulse.rs  mod.rs  platform.rs
src/detection/: mod.rs  pipeline.rs
src/llm/: client.rs  integration.rs  mod.rs  prompts.rs  tools.rs
src/llm/tools/: calendar.rs  mod.rs  quick_actions.rs
src/models/: embedding.rs  melspectrogram.rs  mod.rs  wakeword.rs
src/pipeline/: mod.rs
src/speech_producer/: events.rs  mod.rs
src/user_instruction/: mod.rs
src/vad/: mod.rs  silero.rs
systemd/: README.md  audio-api.service  wakeword.service
tests/: README.md  audio_file_tests.rs  audio_sink_tests.rs  audio_tests.rs  debug_stt.rs  integration_tests.rs  llm_integration_tests.rs  model_loading_test.rs  pipeline_tests.rs  stt_pipeline_tests.rs  time_calculation_test.rs  tts_integration_tests.rs
wakeword/: COMPARISON.md  Cargo.toml  README.md  README_GRPC.md  XNNPACK_INTEGRATION_SUMMARY.md  build.rs
wakeword/examples/: grpc_client_example.rs  tcp_client_example.rs
wakeword/libs/darwin-aarch64/: libtensorflowlite_metal_delegate.dylib
wakeword/libs/darwin-x86_64/: libtensorflowlite_metal_delegate.dylib
wakeword/src/: error.rs  grpc_client.rs  lib.rs  main.rs  model.rs  server.rs  tcp_client.rs  test_utils.rs  tests.rs  utils.rs  vad.rs  xnnpack_fix.rs
wakeword/src/detection/: pipeline.rs
wakeword/src/models/: embedding.rs  mod.rs  wakeword.rs
wakeword/tests/: debug_melspec.rs  debug_tensor_shapes.rs  grpc_client_test.rs  integration_tests.rs  test_basic_functionality.rs  test_legacy_models.rs  test_model_loading.rs  test_xnnpack.rs  test_xnnpack_verification.rs
wakeword_protocol/: Cargo.toml
wakeword_protocol/examples/: simple_client.rs
wakeword_protocol/src/: client.rs  lib.rs  protocol.rs
