[package]
name = "audio"
version = "0.1.0"
edition = "2021"
authors = ["Fredrik Skogberg <freskog@gmail.com>"]
description = "Binary Audio Service with integrated wakeword detection and VAD processing"
license = "MIT"

[dependencies]
cpal = "0.16.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
crossbeam = "0.8"
ringbuf = "0.4"
ctrlc = "3.4"
zbus = { version = "5", features = ["blocking"] }

# Wakeword detection dependencies
voice_activity_detector = "0.2.0"        # VAD processing
tflitec = { path = "./tflitec-rs-fork" } # TensorFlow Lite models

# LED controller dependencies
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
i2cdev = "0.6"
tower-http = { version = "0.6", features = ["cors"] }

[build-dependencies]
