[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Main agent binary with ONNX Runtime and other features"
license.workspace = true

[lib]
name = "agent"
path = "src/lib.rs"

[dependencies]
audio_api = { path = "../audio_api" }

# ONNX Runtime
ort-sys = "=2.0.0-rc.9"

# HTTP client and JSON
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio-tungstenite = { version = "0.25", features = ["native-tls"] }
url = "2.5"
futures-util = "0.3"
http = "1.1"
base64 = "0.22"

# Security
secrecy = "0.10"

# Audio processing (without TensorFlow Lite)
cpal = "0.16.0"
voice_activity_detector = "0.2.0"

# Audio resampling
rubato = "0.16.2"
dasp_sample = "0.11"
dasp_frame = "0.11"

# Async utilities
tokio-stream = "0.1"
async-stream = "0.3"
tokio-util = "0.7"

# Utilities
once_cell = "1.19"
regex = "1.11"

# Common dependencies from workspace
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
dotenvy.workspace = true

# Additional utilities
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
strum = { version = "0.26", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
serial_test = "2.0"
tempfile = "3.10"
test-log = "0.2"
