[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Main agent binary with ONNX Runtime and other features"
license.workspace = true

[lib]
name = "agent"
path = "src/lib.rs"

[dependencies]
audio = { path = "../audio" }
wakeword_protocol = { path = "../wakeword_protocol" }

# ONNX Runtime
ort-sys = "=2.0.0-rc.9"

# Blocking HTTP client for LLM
ureq = { version = "2.10", features = ["json"] }
# Blocking WebSocket for TTS and STT
tungstenite = { version = "0.24", features = ["native-tls"] }
crossbeam-channel = "0.5"
url = "2.5"
http = "1.1"
base64 = "0.22"

# Security
secrecy = "0.10"

# Audio processing (without TensorFlow Lite)
cpal = "0.16.0"
voice_activity_detector = "0.2.0"

# Audio resampling
rubato = "0.16.2"
dasp_sample = "0.11"
dasp_frame = "0.11"

# Utilities
once_cell = "1.19"
regex = "1.11"

# Common dependencies from workspace (NO TOKIO!)
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
dotenvy.workspace = true

# Additional utilities
thiserror = "2.0"
anyhow = "1.0"
strum = { version = "0.26", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Protocol clients
audio_protocol = { path = "../audio_protocol" }

[dev-dependencies]
serial_test = "2.0"
tempfile = "3.10"
test-log = "0.2"
hound = "3.5"
audio_protocol = { path = "../audio_protocol" }
