[package]
name = "audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Audio input/output interface for agent-edge-rs"
license.workspace = true

[dependencies]
audio_protocol = { path = "../audio_protocol" }
cpal = "0.16.0"
thiserror = "2.0"
log.workspace = true
env_logger.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
crossbeam = "0.8"
rubato = "0.16.2"
ctrlc = "3.4"
samplerate = "0.2"
hound = "3.5"                                   # For reading wave files

[features]
audio_available = []

[build-dependencies]
cpal = "0.16.0"

[[bin]]
name = "test_audio_formats"
path = "src/bin/test_audio_formats.rs"

[[bin]]
name = "mock_audio_server"
path = "src/bin/mock_audio_server.rs"
