[package]
name = "audio_protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TCP protocol for audio_api communication"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0"
log.workspace = true
tokio = { version = "1.0", features = ["net", "io-util"] }
