[package]
name = "wakeword"
version = "0.1.0"
edition = "2021"

[dependencies]
service-protos = { path = "../service-protos" }
# tflitec is configured per-target below
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
tonic = "0.13"
futures = "0.3"
hyper-util = "0.1"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
hound = "3.5"
thiserror = "1.0"
rand = "0.8"
tower = { version = "0.4", features = ["util"] }

# Target-specific dependencies: XNNPACK automatically enabled on aarch64 Linux
[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
tflitec = { version = "0.6.0", features = [
    "xnnpack",
    "xnnpack_qu8",
    "xnnpack_qs8",
] }

# For all other targets: tflitec without XNNPACK (permanently disabled)
[target.'cfg(not(all(target_arch = "aarch64", target_os = "linux")))'.dependencies]
tflitec = "0.6.0"

[features]
# XNNPACK features only work on aarch64 Linux due to target-specific dependencies
xnnpack = []
xnnpack_qu8 = []
xnnpack_qs8 = []

[dev-dependencies]
hound = "3.5"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true  # Enable debug symbols in release builds
strip = false # Don't strip debug symbols

[profile.dev]
debug = true  # Ensure debug symbols in dev builds
opt-level = 0 # No optimization for better debugging
