[package]
name = "wakeword"
version = "0.1.0"
edition = "2021"

[dependencies]
audio_protocol = { path = "../audio_protocol" }
# Use our XNNPACK-fixed tflitec fork
tflitec = { path = "../tflitec-rs-fork", features = [
    "xnnpack",
    "xnnpack_qu8",
    "xnnpack_qs8",
] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
hound = "3.5"
thiserror = "1.0"
rand = "0.8"
anyhow = "1.0"

[[bin]]
name = "debug_audio"
path = "src/bin/debug_audio.rs"

[features]
# Enable detailed latency diagnostics and verbose logging for debugging performance issues
latency-diagnostics = []

[dev-dependencies]
hound = "3.5"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true  # Enable debug symbols in release builds
strip = false # Don't strip debug symbols

[profile.dev]
debug = true  # Ensure debug symbols in dev builds
opt-level = 0 # No optimization for better debugging
