[package]
name = "wakeword"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Wake word detection engine based on OpenWakeWord"
license.workspace = true

[dependencies]
wakeword_protocol = { path = "../wakeword_protocol" }
audio_protocol = { path = "../audio_protocol" }
voice_activity_detector = "0.2.0"
log.workspace = true
env_logger.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tflitec = { path = "../tflitec-rs-fork" }
ndarray = "0.16"
rubato = "0.16.2"
hound = "3.5"
thiserror = "2.0"
rand = "0.8"
anyhow = "1.0"

[features]
# Enable detailed latency diagnostics and verbose logging for debugging performance issues
latency-diagnostics = []

[dev-dependencies]
audio = { path = "../audio" }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true  # Enable debug symbols in release builds
strip = false # Don't strip debug symbols

[profile.dev]
debug = true  # Ensure debug symbols in dev builds
opt-level = 0 # No optimization for better debugging
