[package]
name = "wakeword_protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TCP protocol for wakeword event communication"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0"
log.workspace = true
env_logger.workspace = true

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"
